--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ html {
 }
 
 body {
-  font-family: 'Noto Sans KR', Helvetica, '맑은 고딕', 'malgun gothic', 'Apple SD Gothic Neo', sans-serif;  
+  font-family: 'Noto Sans KR', Helvetica, '맑은 고딕', 'malgun gothic', 'Apple SD Gothic Neo', sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 1.4;
@@ -44,9 +44,413 @@ body {
   clear: both;
 
 }
+
 .inner {
   position: relative;
   display: block;
   max-width: 1200px;
   margin: 0 auto;
 }
+
+.wrap {
+  padding-top: 80px;
+}
+
+/* 내용별 Section(컨퍼넌트) */
+
+/* 상단 */
+.header {
+  position: fixed;
+  left: 0;
+  top: 0;
+  overflow: hidden;
+  width: 100%;
+  height: 80px;
+  transition: height 0.5s;
+  z-index: 9999;
+}
+.header-open {
+  height: 400px;
+}
+
+.header::before {
+  content: '';
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 0;
+  width: 100vw;
+  height: 80px;
+  background-color: #fff;
+  box-shadow: 0px 0px 7px 0px rgb(0 0 0 / 20%);
+}
+
+.header .inner {
+  /* background-color: greenyellow; */
+}
+
+.logo {
+  position: absolute;
+  right: calc(100% + 100px);
+  top: 20px;
+  width: 150px;
+  height: 39px;
+  font-size: 0;
+  background: url('../images/logo.png')no-repeat center;
+  background-size: cover;
+}
+
+.gnb {
+
+}
+.gnb::before {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 80px;
+  content: '';
+  display: block;
+  width: 100vw;
+  height: calc(100% - 80px);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+.depth1 {
+  position: relative;
+  display: table;
+  table-layout: fixed;
+  width: calc(180px * 6 - 70px);
+  margin: 0 auto;
+}
+.depth1 > li {
+  display: table-cell;
+  width: 180px;
+  /* background-color: yellow; */
+}
+
+.depth1 > li:last-child {
+  width: 70px;
+}
+
+.depth1 > li > a {
+  position: relative;
+  font-size: 19px;
+  color: #000;
+  font-weight: 500;
+  line-height: 80px;
+}
+
+.depth1 > li > a::after {
+  content: '';
+  position: absolute;
+  display: block;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 0;
+  width: 0;
+  height: 4px;
+  background: #ed1c24;
+  transition: width 0.5s;
+}
+
+.depth1-focus {
+  color: #ed1c24 !important;
+}
+
+.depth1-focus::after {
+  width: 100% !important;
+}
+
+.depth2 {
+  padding-top: 40px;
+  padding-bottom: 20px;
+}
+
+.depth2 li a {
+  display: inline-block;
+  font-size: 15px;
+  color: #fff;
+  margin-bottom: 15px;
+}
+
+.lang {
+  position: absolute;
+  left: calc(100% + 100px);
+  top: 35px;
+  font-size: 0;
+  white-space: nowrap;
+}
+
+.lang a {
+  display: inline-block;
+  color: #888;
+  font-size: 15px;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+.lang-bar {
+  display: inline-block;
+  width: 1px;
+  height: 9px;
+  background-color: #999;
+  margin: 0 10px;
+}
+
+.lang .lang-active {
+  color: #000;
+}
+
+/* 비주얼 */
+.visual {
+  background: url('../images/img_visual01.png') no-repeat center;
+  background-size: cover;
+  background-attachment: fixed;  /* 배경 고정*/
+}
+.visual .inner {
+  height: 855px;
+  border-top: 1px solid rgba(0, 0, 0, 0);
+}
+
+.visual-title {
+  position: relative;
+  font-size: 70px;
+  color: #fff;
+  font-weight: 500;
+  white-space: nowrap;
+  margin-top: 235px;
+  line-height: 1.15;
+}
+
+.visual-title::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: -40px;
+  height: 5px;
+  width: 60px;
+  background-color: #ed1c24;
+}
+
+.visual-txt {
+  font-size: 21px;
+  color: #fff;
+  font-weight: 300;
+  margin-top: 40px;
+}
+
+.visual-bt {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 40px;
+  width: 33px;
+  height: 33px;
+  font-size: 0;
+  border: 0;
+  background: url('../images/bg_common.png') no-repeat ;
+  background-position: -122px 0px;
+  cursor: pointer;
+}
+
+/* 업무파트 */
+.part {}
+
+.part .inner {}
+
+.part-title {
+  position: relative;
+  font-size: 44px;
+  color: #111;
+  font-weight: 600;
+  text-align: center;
+  padding-top: 110px;
+  padding-bottom: 25px;
+}
+
+.part-title::after {
+  content: '';
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 0;
+  width: 37px;
+  height: 4px;
+  background-color: #ed1c24;
+}
+
+.part-txt {
+  font-size: 16px;
+  font-weight: 300;
+  text-align: center;
+  margin-top: 25px;
+  margin-bottom: 75px;
+}
+
+.part-list {
+  
+}
+.part-list li {
+  width: 20%;
+  height: 420px;
+  float: left;
+  background: url('../images/img_business.png') no-repeat;
+  margin-bottom: 133px;
+}
+
+
+.part-list li a {
+  position: relative;
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(244, 128, 37, 0);
+  transition: background-color 0.5s;
+}
+
+.part-list a::after {
+  content: '';
+  position: absolute;
+  left: 50%;
+  top: 65%;
+  transform: translate(-50%, -50%);
+  background: url('../images/bg_common.png') no-repeat;
+  opacity: 0;
+  transition: opacity 0.5s;
+}
+
+.part-list li a:hover {
+  background-color: rgba(244, 128, 37, 1);
+}
+
+.part-list a:hover::after {
+  opacity: 1.0;
+}
+
+.part-list li:nth-child(1) a::after {
+  width: 113px;
+  height: 112px;
+  background-position: -173px 0px;
+} 
+.part-list li:nth-child(2) a::after {
+  width: 123px;
+  height: 111px;
+  background-position: -300px 0px;
+} 
+.part-list li:nth-child(3) a::after {
+  width: 130px;
+  height: 106px;
+  background-position: 0px -121px;
+
+} 
+.part-list li:nth-child(4) a::after {
+  width: 130px;
+  height: 111px;
+  background-position: -140px -122px;
+} 
+.part-list li:nth-child(5) a::after {
+  width: 102px;
+  height: 105px;
+  background-position: -280px -121px;
+}
+
+.part-list li a h3 {
+  font-size: 24px;
+  text-align: center;
+  font-weight: 300;
+  color: #fff;
+  padding-top: 80px;
+}
+
+
+/* 새소식 */
+.news {
+  position: relative;
+}
+.news .inner {
+  z-index: 9;
+}
+.news::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 50%;
+  height: 100%;
+  background-color: #ed1c24;
+}
+.news::after {
+  content: '';
+  position: absolute;
+  left: 50%;
+  top: 0;
+  width: 50%;
+  height: 100%;
+  background-color: #58595b;
+  /* z-index: -1; */
+}
+
+.news-box {
+  width: 50%;
+  float: left;
+  padding: 55px 0;
+}
+
+.news-box:first-child {
+  padding-right: 110px;
+}
+.news-box:last-child {
+  padding-left: 110px;
+}
+
+.news-box h3 {
+  font-size: 32px;
+  color: #fff;
+  font-weight: 300;margin-bottom: 45px;
+}
+.news-list {}
+.news-list li {
+  padding: 30px 0;
+  border-top: 1px solid rgba(225, 225, 225, 0.4);
+}
+
+.news-list li:last-child {
+  border-bottom: 1px solid rgba(225, 225, 225, 0.4);
+}
+
+.news-list li a {
+  position: relative;
+  display: block;
+}
+.news-list li a::after {
+  content: '';
+  position: absolute;
+  right: 0;
+  transform: translateX(-50%);
+  top: 0;
+  width: 48px;
+  height: 23px;
+  background: url('../images/bg_common.png') no-repeat;
+  background-position: 0px -49px;
+}
+
+.news-list li a span {
+  display: inline-block;
+  width: 75%;
+  color: #fff;
+  font-weight: 300;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+
+
+
+/* 고객센터 */
+.cs {}
+
+/* 소개 */
+.about {}
+
+/* 하단 */
+.footer {}
