--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,70 @@ body {
   margin: 0 auto;
 }
 
+/* 안내창 */
+.modal-wrap {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0, 0, 0, 0.7);
+  z-index: 99999;
+}
+.modal-main {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 550px;
+  height: 400px;
+  background-color: #fff;
+  border-radius: 20px;
+  padding: 10px;
+  box-shadow: 0px 0px 15px 0px rgb(0 0 0 / 20%);
+  border: 5px solid rgba(0, 0, 0, 0.1);
+
+}
+.modal-main h1 {
+  font-size: 20px;
+  font-weight: 500;
+  text-align: center;
+  color: #000;
+  padding: 20px 0;
+}
+.modal-main p {
+  text-align: center;
+  font-size: 16px;
+  font-weight: 300;
+  color: #111;
+  line-height: 1.8;
+}
+.modal-main b {
+  font-weight: 600;
+  text-decoration: underline;
+  color: #ed1c24;
+}
+.modal-main strong {
+  font-weight: 600;
+  text-decoration: underline;
+  color: #ed1c24;
+}
+.modal-close {
+  position: absolute;
+  right: 30px;
+  top: 20px;
+  border: 0;
+  cursor: pointer;
+  font-size: 20px;
+  background-color: transparent;
+  color: #999;
+}
+.modal-close:hover {
+  transform: rotate(90deg);
+  transition: transform 0.5s;
+}
+
+
 .wrap {
   padding-top: 80px;
 }
@@ -68,6 +132,7 @@ body {
   height: 80px;
   transition: height 0.5s;
   z-index: 9999;
+  box-shadow: 0px 0px 7px 0px rgb(0 0 0 / 20%);
 }
 
 .header-open {
@@ -83,7 +148,6 @@ body {
   width: 100vw;
   height: 80px;
   background-color: #fff;
-  box-shadow: 0px 0px 7px 0px rgb(0 0 0 / 20%);
 }
 
 .header .inner {
@@ -158,7 +222,7 @@ body {
 }
 
 .depth1-focus::after {
-  width: 100% !important;
+  /* width: 100% !important; */
 }
 
 .depth2 {
