--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @charset "utf-8";
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap");
 
 * {
   margin: 0;
@@ -27,7 +27,8 @@ html {
 }
 
 body {
-  font-family: 'Noto Sans KR', Helvetica, '맑은 고딕', 'malgun gothic', 'Apple SD Gothic Neo', sans-serif;
+  font-family: "Noto Sans KR", Helvetica, "맑은 고딕", "malgun gothic",
+    "Apple SD Gothic Neo", sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 1.4;
@@ -37,12 +38,11 @@ body {
 
 /* 공통요소 */
 .clearfix::after {
-  content: '';
+  content: "";
   position: relative;
   display: block;
   width: 100%;
   clear: both;
-
 }
 
 .inner {
@@ -62,6 +62,7 @@ body {
   background-color: rgb(0, 0, 0, 0.7);
   z-index: 99999;
 }
+
 .modal-main {
   position: absolute;
   left: 50%;
@@ -74,10 +75,9 @@ body {
   padding: 10px;
   box-shadow: 0px 0px 15px 0px rgb(0 0 0 / 20%);
   border: 5px solid rgba(0, 0, 0, 0.1);
-
 }
 
-.modal-main span {
+.modal-main h1 {
   font-size: 20px;
   font-weight: 500;
   text-align: center;
@@ -91,38 +91,63 @@ body {
   margin: 0 auto;
   text-align: center;
 }
-.modal-main .modal-icon span {
+
+.modal-main .modal-icon i {
   font-size: 25px;
-  color: #ad2226;
+  margin-top: 20px;
+  color: #ed1c24;
   text-shadow: 2px 2px 2px rgb(212, 210, 210);
 }
+
 .modal-main h1 {
-  font-size: 20px;
+  font-size: 23px;
   font-weight: 500;
   text-align: center;
   color: #000;
   text-shadow: 2px 2px 2px rgb(192, 192, 192);
-  padding-bottom: 10px;
+  padding-bottom: 20px;
 }
 
 .modal-main p {
   text-align: center;
-  font-size: 16px;
-  font-weight: 300;
-  color: #111;
+  font-size: 20px;
+  font-weight: 500;
+  color: #999;
   line-height: 1.8;
-}
-
-.modal-main b {
-  font-weight: 600;
-  text-decoration: underline;
-  color: #ed1c24;
 }
 
 .modal-main strong {
   font-weight: 600;
   text-decoration: underline;
   color: #ed1c24;
+}
+
+.modal-bottom {
+  position: relative;
+  display: block;
+  margin-top: 50px;
+}
+.modal-bottom span {
+  position: relative;
+  display: block;
+  text-align: center;
+}
+
+.modal-bottom-icon {
+  position: relative;
+  margin-top: 30px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.modal-bottom-icon i {
+  font-size: 30px;
+  color: #999;
+  transition: all 0.5s;
+}
+
+.modal-bottom-icon i:hover {
+  color: #000;
 }
 
 .modal-close {
@@ -165,7 +190,7 @@ body {
 }
 
 .header::before {
-  content: '';
+  content: "";
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
@@ -186,19 +211,18 @@ body {
   width: 150px;
   height: 39px;
   font-size: 0;
-  background: url('../images/logo.png')no-repeat center;
+  background: url("../images/logo.png") no-repeat center;
   background-size: cover;
 }
 
 .gnb {
-
 }
 .gnb::before {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
   top: 80px;
-  content: '';
+  content: "";
   display: block;
   width: 100vw;
   height: calc(100% - 80px);
@@ -230,7 +254,7 @@ body {
 }
 
 .depth1 > li > a::after {
-  content: '';
+  content: "";
   position: absolute;
   display: block;
   left: 50%;
@@ -292,9 +316,9 @@ body {
 
 /* 비주얼 */
 .visual {
-  background: url('../images/img_visual01.png') no-repeat center;
+  background: url("../images/img_visual01.png") no-repeat center;
   background-size: cover;
-  background-attachment: fixed;  /* 배경 고정*/
+  background-attachment: fixed; /* 배경 고정*/
 }
 .visual .inner {
   height: 855px;
@@ -312,7 +336,7 @@ body {
 }
 
 .visual-title::before {
-  content: '';
+  content: "";
   position: absolute;
   left: 0;
   top: -40px;
@@ -337,15 +361,17 @@ body {
   height: 33px;
   font-size: 0;
   border: 0;
-  background: url('../images/bg_common.png') no-repeat ;
+  background: url("../images/bg_common.png") no-repeat;
   background-position: -122px 0px;
   cursor: pointer;
 }
 
 /* 업무파트 */
-.part {}
+.part {
+}
 
-.part .inner {}
+.part .inner {
+}
 
 .part-title {
   position: relative;
@@ -358,7 +384,7 @@ body {
 }
 
 .part-title::after {
-  content: '';
+  content: "";
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
@@ -377,16 +403,14 @@ body {
 }
 
 .part-list {
-  
 }
 .part-list li {
   width: 20%;
   height: 420px;
   float: left;
-  background: url('../images/img_business.png') no-repeat;
+  background: url("../images/img_business.png") no-repeat;
   margin-bottom: 133px;
 }
-
 
 .part-list li a {
   position: relative;
@@ -398,12 +422,12 @@ body {
 }
 
 .part-list a::after {
-  content: '';
+  content: "";
   position: absolute;
   left: 50%;
   top: 65%;
   transform: translate(-50%, -50%);
-  background: url('../images/bg_common.png') no-repeat;
+  background: url("../images/bg_common.png") no-repeat;
   opacity: 0;
   transition: opacity 0.5s;
 }
@@ -413,30 +437,29 @@ body {
 }
 
 .part-list a:hover::after {
-  opacity: 1.0;
+  opacity: 1;
 }
 
 .part-list li:nth-child(1) a::after {
   width: 113px;
   height: 112px;
   background-position: -173px 0px;
-} 
+}
 .part-list li:nth-child(2) a::after {
   width: 123px;
   height: 111px;
   background-position: -300px 0px;
-} 
+}
 .part-list li:nth-child(3) a::after {
   width: 130px;
   height: 106px;
   background-position: 0px -121px;
-
-} 
+}
 .part-list li:nth-child(4) a::after {
   width: 130px;
   height: 111px;
   background-position: -140px -122px;
-} 
+}
 .part-list li:nth-child(5) a::after {
   width: 102px;
   height: 105px;
@@ -451,7 +474,6 @@ body {
   padding-top: 80px;
 }
 
-
 /* 새소식 */
 .news {
   position: relative;
@@ -460,7 +482,7 @@ body {
   z-index: 9;
 }
 .news::before {
-  content: '';
+  content: "";
   position: absolute;
   left: 0;
   top: 0;
@@ -469,7 +491,7 @@ body {
   background-color: #ed1c24;
 }
 .news::after {
-  content: '';
+  content: "";
   position: absolute;
   left: 50%;
   top: 0;
@@ -495,9 +517,11 @@ body {
 .news-box h3 {
   font-size: 32px;
   color: #fff;
-  font-weight: 300;margin-bottom: 45px;
+  font-weight: 300;
+  margin-bottom: 45px;
 }
-.news-list {}
+.news-list {
+}
 .news-list li {
   padding: 30px 0;
   border-top: 1px solid rgba(225, 225, 225, 0.4);
@@ -512,14 +536,14 @@ body {
   display: block;
 }
 .news-list li a::after {
-  content: '';
+  content: "";
   position: absolute;
   right: 0;
   transform: translateX(-50%);
   top: 0;
   width: 48px;
   height: 23px;
-  background: url('../images/bg_common.png') no-repeat;
+  background: url("../images/bg_common.png") no-repeat;
   background-position: 0px -49px;
 }
 
@@ -533,7 +557,6 @@ body {
   overflow: hidden;
 }
 
-
 /* 고객센터 */
 .cs {
   background-color: #f8f8f8;
@@ -542,7 +565,7 @@ body {
   padding: 60px 0;
 }
 
-.cs .inner a{
+.cs .inner a {
   display: block;
   float: left;
   width: calc(50% - 1px);
@@ -551,33 +574,34 @@ body {
 
 .cs-faq {
   margin-right: 2px;
-  background: #fff url('../images/bg_faq.png') no-repeat;
+  background: #fff url("../images/bg_faq.png") no-repeat;
   background-position: calc(100% - 50px) center;
 }
 
 .cs-qa {
-  background: #fff url('../images/bg_custom.png') no-repeat;
+  background: #fff url("../images/bg_custom.png") no-repeat;
   background-position: calc(100% - 50px) center;
 }
 
 .cs h3 {
   font-size: 30px;
-  color: #000;font-weight: 500;
+  color: #000;
+  font-weight: 500;
 }
 .cs p {
   font-weight: 300;
 }
 
-
 /* 소개 */
-.about {}
+.about {
+}
 
 .about .inner {
   padding: 100px 0;
 }
 
 .about-top {
-  background: url('../images/img_about.png') no-repeat;
+  background: url("../images/img_about.png") no-repeat;
   background-position: right top;
   padding-bottom: 70px;
 }
@@ -586,7 +610,6 @@ body {
   color: #111;
   margin-bottom: 55px;
   font-weight: 700;
-
 }
 
 .about-top p {
@@ -594,8 +617,8 @@ body {
   position: relative;
 }
 
-.about-top p::before{
-  content: '';
+.about-top p::before {
+  content: "";
   position: absolute;
   left: 0;
   top: 10px;
@@ -604,15 +627,15 @@ body {
   background-color: #ed1c24;
 }
 
-.about-top p strong{
+.about-top p strong {
   display: block;
-font-size: 21px;
-color: #111;
-font-weight: 500;
-margin-bottom: 25px;
+  font-size: 21px;
+  color: #111;
+  font-weight: 500;
+  margin-bottom: 25px;
 }
 
-.about-top p span{
+.about-top p span {
   display: block;
   font-size: 15px;
   font-weight: 300;
@@ -628,15 +651,14 @@ margin-bottom: 25px;
   color: #111;
   display: inline-block;
   margin-right: 210px;
-
 }
 .about-bottom a::before {
-  content: '';
+  content: "";
   position: relative;
   display: block;
   width: 100px;
   height: 108px;
-  background: url('../images/bg_icon.png') no-repeat;
+  background: url("../images/bg_icon.png") no-repeat;
   margin-bottom: 25px;
 }
 .about-bottom .about-link-1::before {
@@ -650,10 +672,9 @@ margin-bottom: 25px;
   margin-right: 0px;
 }
 
-
 /* 하단 */
 .footer {
-  background-color: #4e4E4e;
+  background-color: #4e4e4e;
 }
 
 .footer .inner {
@@ -662,7 +683,7 @@ margin-bottom: 25px;
 
 .footer-wrap {
   padding-left: 250px;
-  background: url('../images/logo_footer.png') no-repeat;
+  background: url("../images/logo_footer.png") no-repeat;
 }
 .footer-wrap address {
   color: #c3c3c3;
